Fix scrollbar of flont view

--- a/app/assets/stylesheets/modules/_groupList.scss
+++ b/app/assets/stylesheets/modules/_groupList.scss
@@ -4,6 +4,10 @@
   width: 300px;
   overflow: scroll;
 
+  &::-webkit-scrollbar {
+    display:none;
+  }
+
   &__group {
     height: 91px;
     padding: 20px 20px 40px;
